--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "my-pizza",
-  "homepage": "https://euricalex.github.io/react-pizza/",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://euricalex.github.io/react-pizza/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -17,8 +17,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "lint:js": "eslint src/**/*.{js,jsx}"
   },
   "eslintConfig": {
     "extends": [
@@ -37,8 +36,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^6.1.1"
   }
 }
