--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "axios": "^1.6.7",
     "classnames": "^2.5.1",
     "express": "^4.18.2",
+    "lodash.debounce": "^4.0.8",
     "prop-types": "^15.8.1",
+    "qs": "^6.12.0",
     "react": "^18.2.0",
     "react-content-loader": "^6.2.1",
     "react-dom": "^18.2.0",
